--- a/Users/templates/Users/login.html
+++ b/Users/templates/Users/login.html
@@ -4,16 +4,16 @@
     <form method="post">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
+            <legend class="border-bottom mb-4">Log In</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            <button class="btn btn-outline-info" type="submit">Log In</button>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account? <a class="ml-2" href="{% url 'Blog:login' %}">Log in</a>  
+            Need an account? <a class="ml-2" href="{% url 'Blog:register' %}">Register</a>
         </small>
     </div>
 </div>
