--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -6,7 +6,7 @@
             <a class="mr-2" href="#">{{ post.author }}</a>
             <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
         </div>
-        <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+        <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content }}</p>
         <p class="article-tags">{{ post.tags }}</p>
     </div>
