Urls related to user login etc updated

--- a/Users/templates/Users/register.html
+++ b/Users/templates/Users/register.html
@@ -13,7 +13,7 @@
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account? <a class="ml-2" href="{% url 'Blog:login' %}">Log in</a>  
+            Already have an account? <a class="ml-2" href="{% url 'login' %}">Log in</a>  
         </small>
     </div>
 </div>
