--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -28,12 +28,12 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'Blog:profile' %}">Profile</a>
+                    <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <a class="nav-item nav-link" href="{% url 'Blog:post-create' %}">New Post</a>
-                    <a class="nav-item nav-link" href="{% url 'Blog:logout' %}">Log Out</a>
+                    <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
                     {% else %}
-                    <a class="nav-item nav-link" href="{% url 'Blog:login' %}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'Blog:register' %}">Register</a>
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                     {% endif %}
                 </div>
             </div>
