--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -87,3 +87,21 @@ a.article-title:hover {
 .account-heading {
     font-size: 2.5rem;
 }
+
+.article-tags {
+    display: inline-block;
+    padding: .4em .5em;
+    margin: 2px 2px 2px 0;
+    font-size: 12px;
+    line-height: 1;
+    white-space: nowrap;
+    text-decoration: none;
+    text-align: center;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 3px;
+    transition: all .15s ease-in-out;
+    color: #39739d;
+    background-color: #E1ECF4;
+    border-color: #E1ECF4;
+}
