--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -16,7 +16,7 @@
     {% csrf_token %}
     <div class="form-group">
         <a class="btn btn-outline-info" href="{% url 'Blog:post-update' post.slug %}">Get back to edit</a>
-        <button class="btn btn-outline-info ml-2" type="submit">Submit your Post</button>
+        <button class="btn btn-outline-info ml-2" type="submit">Submit for review</button>
     </div>
 </form>
 {% endblock content %}
