--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -10,25 +10,27 @@
         </div>
         <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content }}</p>
-        <p class="article-tags">{{ post.tags }}</p>
+        {% for tag in post.tags|make_list %}
+            <p class="article-tags">{{ tag }}</p>
+        {% endfor %}
     </div>
 </article>
 {% endfor %}
 {% if is_paginated %}
     {% if page_obj.has_previous %}
-        <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        <a class="btn btn-outline-info ml-3 mb-4" href="?page=1">First</a>
+        <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
     {% endif %}
     {% for num in page_obj.paginator.page_range %}
         {% if page_obj.number == num %}
-        <a class="btn btn-info mb-4" href="?page={{num}}">{{num}}</a>
+        <a class="btn btn-info ml-3 mb-4" href="?page={{num}}">{{num}}</a>
         {% elif num > obj.page_obj.number|add:'-3' and num > obj.page_obj.number|add:'3' %}
-            <a class="btn btn-outline-info mb-4" href="?page={{num}}">{{num}}</a>
+            <a class="btn btn-outline-info ml-3 mb-4" href="?page={{num}}">{{num}}</a>
         {% endif %}
     {% endfor %}
     {% if page_obj.has_next %}
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+        <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
     {% endif %}
 {% endif %}
 {% endblock content %}
