Content beside the user's profile picture modified to display their name and username

--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -3,9 +3,8 @@
     <div class="media">
         <img class="rounded-circle account-img" src="{{user.profile.image.url}}">
         <div class="media-body">
-            <h2 class="account-heading">{{user.username}}</h2>
-            <p class="text-secondary">{{user.email}}</p>
-            <p class="text-secondry">{{user.profile.bio}}</p>
+            <h2 class="account-heading">{{user.profile.name}}</h2>
+            <p class="text-secondry">{{user.username}}</p>
         </div>
     </div>
     <!-- FORM HERE -->
