Margin added to pagination segment

--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -1,6 +1,14 @@
-{% extends "Blog/base.html" %}
-{% block content %}
-<h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+{% extends "Blog/base.html" %} {% block content %}
+<h3 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h3>
+<!-- <div class="{{profile}} content-section float-left col-lg-3 col-md-12 pr-3 pr-md-0">
+    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+    <div class="username">
+        {{view.kwargs.username}}
+    </div>
+    <div class="user-bio">
+      Bio: {{ profile.bio }}
+    </div>
+</div> -->
 {% for post in posts %}
 
 <article class="media content-section">
@@ -15,15 +23,10 @@
         <p class="article-tags">{{ post.tags }}</p>
     </div>
 </article>
-{% endfor %}
-{% if is_paginated %}
-    {% if page_obj.has_previous %}
-    <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a> {% endif %} {% for num in page_obj.paginator.page_range %} {% if page_obj.number == num %}
-    <a class="btn btn-info mb-4" href="?page={{num}}">{{num}}</a> {% elif num > obj.page_obj.number|add:'-3' and num > obj.page_obj.number|add:'3' %}
-    <a class="btn btn-outline-info mb-4" href="?page={{num}}">{{num}}</a> {% endif %} {% endfor %} {% if page_obj.has_next %}
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-    {% endif %}
-{% endif %}
-{% endblock content %}
+{% endfor %} {% if is_paginated %} {% if page_obj.has_previous %}
+<a class="btn btn-outline-info ml-3 mb-4" href="?page=1">First</a>
+<a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a> {% endif %} {% for num in page_obj.paginator.page_range %} {% if page_obj.number == num %}
+<a class="btn btn-info ml-3 mb-4" href="?page={{num}}">{{num}}</a> {% elif num > obj.page_obj.number|add:'-3' and num > obj.page_obj.number|add:'3' %}
+<a class="btn btn-outline-info ml-3 mb-4" href="?page={{num}}">{{num}}</a> {% endif %} {% endfor %} {% if page_obj.has_next %}
+<a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+<a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a> {% endif %} {% endif %} {% endblock content %}
