--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -1,14 +1,43 @@
-{% extends "Blog/base.html" %} {% block content %}
+{% extends "Blog/base.html" %}
+{% block content %}
+<div class="row {{profile}} content-section">
+    <div class=" avatar profile-img col-lg-3 col-md-12 pr-3">
+        <img class="user-img" src="{{ profile.image.url }}" alt="{{profile.name}}">
+    </div>
+    <li class="profile-info col-lg-9 col-md-12 pr-3">
+        <ul class="user-name mt-2 account-heading">
+            {{view.kwargs.user.first_name}} {{post.author.last_name}}
+        </ul>
+        <ul class="user-bio mt-2 center">
+            {{ profile.bio }}
+        </ul>
+        {% if profile.public %}
+        <ul class="user-email email mt-2 center">
+            <span><i class="fa fa-envelope mr-3"></i>{{ user.email }}</span>
+        </ul>
+        {% endif %}
+        {% if profile.location %}
+        <ul class="user-location mt-2 center">
+            <span><i class="fas fa-map-marker-alt mr-3"></i>{{ profile.location }}</span>
+        </ul>
+        {% endif %}
+        {% if profile.website %}
+        <ul class="user-website mt-2 center">
+            <span>
+                <i class="fas fa-external-link-alt mr-3"></i>
+                <a href="{{profile.website}}" target="_blank">{{ profile.website }}</a>
+            </span>
+        </ul>
+        {% endif %}
+        {% if profile.user == user %}
+        <ul>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'profile' %}">Update</a>
+        </ul>
+        {% endif %}
+    </li>
+</div>
+<!-- <div class="posts col-lg-6 col-md-6 col-sm-12 pr-3 ml-3"> -->
 <h3 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h3>
-<!-- <div class="{{profile}} content-section float-left col-lg-3 col-md-12 pr-3 pr-md-0">
-    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-    <div class="username">
-        {{view.kwargs.username}}
-    </div>
-    <div class="user-bio">
-      Bio: {{ profile.bio }}
-    </div>
-</div> -->
 {% for post in posts %}
 
 <article class="media content-section">
@@ -23,6 +52,7 @@
         <p class="article-tags">{{ post.tags }}</p>
     </div>
 </article>
+<!-- </div> -->
 {% endfor %} {% if is_paginated %} {% if page_obj.has_previous %}
 <a class="btn btn-outline-info ml-3 mb-4" href="?page=1">First</a>
 <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a> {% endif %} {% for num in page_obj.paginator.page_range %} {% if page_obj.number == num %}
