--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -2,8 +2,8 @@
 <div class="content-section">
     <div class="media">
         <img class="rounded-circle account-img" src="{{user.profile.image.url}}">
-        <div class="media-body">
-            <h2 class="account-heading">{{user.profile.name}}</h2>
+        <div class="media-body" style="text-align: justify">
+            <h2 class="account-heading">{{user.first_name}}</h2>
             <p class="text-secondry">{{user.username}}</p>
         </div>
     </div>
