--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -1,42 +1,46 @@
 {% extends "Blog/base.html" %}
 {% block content %}
-<div class="row {{profile}} content-section">
-    <div class=" avatar profile-img col-lg-3 col-md-12 pr-3">
-        <img class="user-img" src="{{ profile.image.url }}" alt="{{profile.name}}">
+<div class="row {{profile}} content-section mt-0">
+    <div class="avatar col-xs-12 col-md-3 pr-3">
+        <img class="user-img" src="{{ profile.image.url }}" alt="{{user.name}}">
     </div>
-    <li class="profile-info col-lg-9 col-md-12 pr-3">
-        <ul class="user-name mt-2 account-heading">
-            {{view.kwargs.user.first_name}} {{post.author.last_name}}
-        </ul>
-        <ul class="user-bio mt-2 center">
-            {{ profile.bio }}
-        </ul>
-        {% if profile.public %}
-        <ul class="user-email email mt-2 center">
-            <span><i class="fa fa-envelope mr-3"></i>{{ user.email }}</span>
-        </ul>
-        {% endif %}
-        {% if profile.location %}
-        <ul class="user-location mt-2 center">
-            <span><i class="fas fa-map-marker-alt mr-3"></i>{{ profile.location }}</span>
-        </ul>
-        {% endif %}
-        {% if profile.website %}
-        <ul class="user-website mt-2 center">
+    <div class="profile-info col-xs-12 col-md-9 mt-1 pr-3">
+        <ul class="list-unstyled ml-5 pr-3">
+            <li class="user-name mt-2 account-heading">
+                {{self.kwargs.name}}
+            </li>
+            <h4 class="user-bio mb-2">
+                {{ profile.bio }}
+            </h4>
+            {% if profile.public %}
+            <li class="user-email mt-2">
+                <span><i class="fa fa-envelope fa-fw mr-2"></i>{{ user.email }}</span>
+            </li>
+            {% endif %}
+            {% if profile.location %}
+            <li class="user-location mt-2">
+                <span><i class="fa fa-map-marker-alt fa-fw mr-2"></i>{{ profile.location }}</span>
+            </li>
+            {% endif %}
+            {% if profile.website %}
+            <li class="user-website mt-2">
+                <span>
+                    <i class="fa fa-external-link-alt fa-fw mr-2"></i><a href="{{profile.website}}" target="_blank">{{ profile.website }}</a>
+                </span>
+            </li>
+            {% endif %}
+            <li class="user-join-date mt-2">
             <span>
-                <i class="fas fa-external-link-alt mr-3"></i>
-                <a href="{{profile.website}}" target="_blank">{{ profile.website }}</a>
+                <i class="fa fa-history fa-fw mr-2"></i>Joined {{ profile.join_date|date:"M Y" }}<li>
             </span>
+            {% if profile.user == user %}
+                <a class="edit-icon btn btn-md mt-2 mb-1 float-right" href="{% url 'profile' %}" title="update profile info">
+                <i class="fa fa-edit"></i>
+                </a>
+            {% endif %}
         </ul>
-        {% endif %}
-        {% if profile.user == user %}
-        <ul>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'profile' %}">Update</a>
-        </ul>
-        {% endif %}
-    </li>
+    </div>
 </div>
-<!-- <div class="posts col-lg-6 col-md-6 col-sm-12 pr-3 ml-3"> -->
 <h3 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h3>
 {% for post in posts %}
 
