max-width of avatar class used for displaying user's image updated

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -116,7 +116,7 @@ a.article-title:hover {
 }
 
 .avatar {
-    max-width: 200px;
+    /* max-width: 200px; */
     max-height: 200px;
     line-height: 200px;
     text-align: center;
