--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -3,7 +3,7 @@
     <div class="media">
         <img class="rounded-circle account-img" src="{{user.profile.image.url}}">
         <div class="media-body" style="text-align: justify">
-            <h2 class="account-heading">{{user.first_name}}</h2>
+            <h2 class="account-heading">{{user.first_name}} {{user.last_name}}</h2>
             <p class="text-secondry">{{user.username}}</p>
         </div>
     </div>
