--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -9,7 +9,7 @@
             <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
         </div>
         <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
-        <p class="article-content">{{ post.content }}</p>
+        <p class="article-short-des">{{ post.short_des }}</p>
         {% for tag in post.tags|make_list %}
             <p class="article-tags">{{ tag }}</p>
         {% endfor %}
