Styling added for short-des class that shows short description for posts

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -50,7 +50,8 @@ a.article-title:hover {
     text-decoration: none;
 }
 
-.article-content {
+.article-content,
+.article-short-des {
     white-space: pre-line;
 }
 
