Link sharing option added to posts

--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,5 +1,6 @@
 {% extends "Blog/base.html" %}
 {% block content %}
+{% with domain='http://staycurious.in' %}
 {% for post in posts %}
 <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
@@ -14,6 +15,18 @@
             <p class="article-tags">{{ tag }}</p>
         {% endfor %}
     </div>
+    <ul class="list-unstyled share-icon mt-2 mb-2 float-right">
+    {% url 'Blog:post-detail' post.slug as link %}
+    {% with domain|add:link as link %}
+        <li><a href="http://www.facebook.com/sharer.php?u={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-facebook ml-2 mr-2"></i></a></li>
+        <li><a href="http://www.twitter.com/share?text={{post.title}}&url={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-twitter ml-2 mr-2"></i></a></li>
+        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url={{link|urlencode:''}}&title={{post.title|urlencode}}&source=StayCurious-Blog" rel="nofollow noopener noreferrer" target="_blank" ><i class="fab fa-linkedin ml-2 mr-2"></i></a></li>
+        <li><a href="http://www.reddit.com/submit?url={{link}}post-to-reddit-via-url&titile={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-reddit ml-2 mr-2"></i></a></li>
+        {# <li><a href="http://www.pinterest.com/pin/create/link/u={{link|urlencode:''}}&description={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-pinterest ml-2 mr-2"></a></li> #}
+        <li><button class="copy" onclick="Copy({{link}})"><i class="far fa-clipboard ml-2 mr-2"></i></button></li>
+        {# <li><button class="copy" onclick="C opy({{link}})"><img class="ml-2 mr-2" src="{% static 'img/copy.png' %}" alt="Copy to clipboard" style="width:40px"></button></li> #}
+    {% endwith %}
+    </ul>
 </article>
 {% endfor %}
 {% if is_paginated %}
@@ -33,4 +46,5 @@
         <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
     {% endif %}
 {% endif %}
+{% endwith %}
 {% endblock content %}
