--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -131,6 +131,10 @@ a.article-title:hover {
     /* vertical-align: middle; */
 }
 
+#response {
+    font-size: 0.9rem;
+}
+
 .share-icon {
     display: inline;
     font-size: 1.4rem!important;
@@ -139,6 +143,13 @@ a.article-title:hover {
 
 .share-icon li {
     display: inline;
+}
+
+.copy,
+.bookmark {
+    background-color: #fff;
+    border: none;
+    font-size: 1.2rem!important;
 }
 
 .fa-facebook {
