--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/e8c126582c.js"></script>
+    {% comment %} <script src="https://kit.fontawesome.com/e8c126582c.js"></script> {% endcomment %}
     <script src="{% static 'Blog/main.js' %}"></script>
     <script>window.CSRF_TOKEN="{{ csrf_token }}"</script>
     {% if title %}
@@ -55,11 +55,17 @@
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-8">
-                {% if messages %} {% for message in messages %}
-                <div class="alert alert-{{message.tags}}">
-                    {{message}}
+                {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{message.tags}}">
+                        {{message}}
+                    </div>
+                    {% endfor %}
+                {% endif %}
+                <div id="response">
                 </div>
-                {% endfor %} {% endif %} {% block content %} {% endblock %}
+                {% block content %}
+                {% endblock %}
             </div>
             <div class="col-md-4">
                 <div class="content-section">
