--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -3,6 +3,7 @@
 {% with domain='https://staycurious.in' %}
 {% for post in posts %}
 <article class="media content-section">
+    {{profile.bookmarked_posts}}
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
     <div class="media-body">
         <div class="article-metadata">
@@ -18,15 +19,15 @@
     <ul class="list-unstyled share-icon mt-2 mb-2 float-right">
     {% url 'Blog:post-detail' post.slug as link %}
     {% with domain|add:link as link %}
-        <li><a href="http://www.facebook.com/sharer.php?u={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-facebook ml-2 mr-2"></i></a></li>
-        <li><a href="http://www.twitter.com/share?text={{post.title}}&url={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-twitter ml-2 mr-2"></i></a></li>
-        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url={{link|urlencode:''}}&title={{post.title|urlencode}}&source=StayCurious-Blog" rel="nofollow noopener noreferrer" target="_blank" ><i class="fab fa-linkedin ml-2 mr-2"></i></a></li>
-        <li><a href="http://www.reddit.com/submit?url={{link}}post-to-reddit-via-url&titile={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-reddit ml-2 mr-2"></i></a></li>
-        {# <li><a href="http://www.pinterest.com/pin/create/link/u={{link|urlencode:''}}&description={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-pinterest ml-2 mr-2"></a></li> #}
+        <li><a href="http://www.facebook.com/sharer.php?u={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-facebook ml-2 mr-2"></i></a></li>
+        <li><a href="http://www.twitter.com/share?text={{post.title}}&url={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-twitter ml-2 mr-2"></i></a></li>
+        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url={{link|urlencode:''}}&title={{post.title|urlencode}}&source=StayCurious-Blog" rel="nofollow noopener noreferrer" target="_blank" ><i class="fa fa-linkedin ml-2 mr-2"></i></a></li>
+        <li><a href="http://www.reddit.com/submit?url={{link}}post-to-reddit-via-url&titile={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-reddit ml-2 mr-2"></i></a></li>
+        {# <li><a href="http://www.pinterest.com/pin/create/link/u={{link|urlencode:''}}&description={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-pinterest ml-2 mr-2"></a></li> #}
         {% comment %} <p class="link" style="display:none">{{link}}</p> {% endcomment %}
-        <li><button class="btn copy" data-text={{link}}><i class="far fa-clipboard" title="Copy link"></i></button></li>
+        <li><a class="btn copy" data-text={{link}}><i class="fa fa-clipboard" title="Copy link"></i></a></li>
         {# <li><button class="copy" onclick="C opy({{link}})"><img class="ml-2 mr-2" src="{% static 'img/copy.png' %}" alt="Copy to clipboard" style="width:40px"></button></li> #}
-        <li><button class="btn bookmark" data-post={{post.slug}}><i class="far fa-bookmark" title="Bookmark to read later"></i></button></li>
+        <li><a class="btn bookmark" data-post={{post.slug}}><i class="fa fa-bookmark" title="Bookmark to read later"></i></a></li>
     {% endwith %}
     </ul>
 </article>
