--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -133,6 +133,10 @@ a.article-title:hover {
 
 #response {
     font-size: 0.9rem;
+    position: fixed;
+    top: 70px;
+    text-align: center;
+    opacity: 0.9;
 }
 
 #share {
