Response positioned to the center

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -135,7 +135,7 @@ a.article-title:hover {
     font-size: 0.9rem;
     position: fixed;
     top: 70px;
-    text-align: center;
+    left: 28%;
     opacity: 0.9;
 }
 
