--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -61,6 +61,7 @@ a.article-title:hover {
     height: 65px;
     width: 65px;
     margin-right: 16px;
+    float: left;
 }
 
 .article-metadata {
@@ -85,6 +86,25 @@ a.article-title:hover {
     width: 125px;
     margin-right: 20px;
     margin-bottom: 16px;
+}
+
+#post-detail .article-img img {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+}
+
+#post-detail .article-info {
+    display: inline-block;
+    width: 80%;
+}
+
+#post-detail .article-metadata {
+    padding-bottom: 1px;
+    margin-bottom: 4px;
+    border-bottom: 1px solid #e3e3e3;
+    /* display: flex; */
 }
 
 .account-heading {
