--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -17,21 +17,26 @@
 </ul>
 </div>
 
-<article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+<article id="post-detail" class="content-section">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{% url 'Blog:user-posts' object.author.username %}">{{ object.author }}</a>
-            <small class="text-muted">{{ object.date_posted|date:"j M Y" }}</small>
-            {% if object.author == user %}
-                <div>
-                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'Blog:post-update' object.slug %}">Update</a>
-                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'Blog:post-delete' object.slug %}">Delete</a>
+            {% comment %} <div class="article-img"> {% endcomment %}
+                <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+            {% comment %} </div> {% endcomment %}
+            <div class="article-info">
+                <a class="mr-2" href="{% url 'Blog:user-posts' object.author.username %}">{{ object.author }}</a>
+                <small class="text-muted">{{ object.date_posted|date:"j M Y" }}</small>
+                {% if object.author == user %}
+                    <div style="float:right">
+                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'Blog:post-update' object.slug %}">Update</a>
+                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'Blog:post-delete' object.slug %}">Delete</a>
+                    </div>
+                {% endif %}
+                <div class="article-title">
+                    <h2>{{ object.title }}</a></h2>
                 </div>
-            {% endif %}
+            </div>
         </div>
-        <h2 class="article-title">{{ object.title }}</a>
-        </h2>
         <p class="article-content">{{ object.content }}</p>
         <p class="article-tags">{{ object.tags }}</p>
     </div>
