--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -70,6 +70,7 @@
         {# <li><a href="http://www.pinterest.com/pin/create/link/u={{link|urlencode:''}}&description={{object.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-pinterest ml-2 mr-2"></a></li> #}
         <li><a class="copy" data-text={{link}} title="Copy link"><i class="fa fa-clipboard ml-2 mr-2"></i></a></li>
         {# <li><button class="copy" onclick="C opy({{link}})"><img class="ml-2 mr-2" src="{% static 'img/copy.png' %}" alt="Copy to clipboard" style="width:40px"></button></li> #}
+        <li><a class="btn bookmark" data-post={{post.slug}} data-url={% url 'Blog:bookmark-post'%} title="Bookmark this post"><i class="fa fa-bookmark"></i></a></li>
     {% endwith %}
 </div>
 {% endfor %}
