--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -35,6 +35,48 @@ ul {
     font-weight: 500;
 }
 
+.dropbtn {
+    background-color: transparent;
+    /* color: #cbd5db; */
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.user-image {
+    height: 20px;
+    width: 25px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fafafa;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    text-align: left;
+    width: 100%;
+    overflow: auto;
+}
+
+#dropdown .dropdown-content .nav-link {
+    color: #444444;
+}
+
+.dropdown-content .nav-link:hover {
+    font-weight: 700;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .content-section {
     background: #ffffff;
     padding: 10px 20px;
