--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -12,9 +12,12 @@
         </div>
         <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
         <p class="article-short-des">{{ post.short_des|truncatewords_html:'50' }}&nbsp<span><a href="{% url 'Blog:post-detail' post.slug %}">Read more</a></p>
-        {% for tag in post.tags|make_list %}
+        {% comment %} {% for tag in post.tags|make_list %}
             <p class="article-tags">{{ tag }}</p>
-        {% endfor %}
+        {% endfor %} {% endcomment %}
+        {% for tag in post.get_tags_list %}
+            <a href="{% url 'Blog:tagged' tag%}"><p class="article-tags">{{ tag }}</p></a>
+        {% endfor %}        
     </div>
     <ul class="list-unstyled share-icon mt-2 mb-2 float-right">
     {% url 'Blog:post-detail' post.slug as link %}
