--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -45,9 +45,9 @@
                             <p class="ml-3">Signed in as <strong>{{user.username}}</strong><p>
                             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                             <a class="nav-item nav-link" href="{% url 'Blog:post-create' %}">New Post</a>
-                            <a class="nav-item nav-link" href="{% url 'my-posts' user %}">My Posts</a>
-                            <a class="nav-item nav-link" href="#">My Bookmarks</a>
-                            <a class="nav-item nav-link" href="#">My Drafts</a>
+                            <a class="nav-item nav-link" href="{% url 'Blog:my-posts' user %}">My Posts</a>
+                            <a class="nav-item nav-link" href="{% url 'Blog:user-bookmarks' user %}">Bookmarks</a>
+                            <a class="nav-item nav-link" href="#">Drafts</a>
                             <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
                         </div>
                     </div>
