--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -46,6 +46,7 @@ ul {
 .user-image {
     height: 20px;
     width: 25px;
+    cursor: pointer;
 }
 
 .dropdown {
@@ -73,7 +74,8 @@ ul {
     font-weight: 700;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content,
+.dropdown:focus .dropdown-content {
     display: block;
 }
 
@@ -217,6 +219,11 @@ a.article-title:hover {
 
 .share-icon a:hover {
     opacity: 0.55;
+}
+
+#bookmark:hover,
+#unbookmark:hover {
+    opacity: 1;
 }
 
 .share-icon li {
